--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>Project was to make a "Pacman" simulation</p>
     </br>
     <h2> Bus Stop</h2>
-        <a href="https://jessiejgarcia.github.io/busStops.git">
+        <a href="https://jessiejgarcia.github.io/busStops/">
             Busses 
         </a>
         <p>Project was designed to show route and stops between Harvard and MIT
